--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "mill/product-ean",
   "description": "Plugin to display the ean on the detail page",
-  "version": "v1.0.0",
+  "version": "1.0.1",
   "type": "shopware-platform-plugin",
   "license": "MIT",
   "authors": [
