--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
   "name": "mill/product-ean",
   "description": "Plugin to display the ean on the detail page",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "type": "shopware-platform-plugin",
-  "license": "MIT",
+  "license": "proprietary",
   "authors": [
     {
       "name": "MILLENWORLD"
